fix: use correct z-index value

--- a/src/shared/components/navbar/nav-menu.module.css
+++ b/src/shared/components/navbar/nav-menu.module.css
@@ -7,7 +7,7 @@
   width: 230px;
   padding: 15px;
   background: #fff;
-  z-index: 1;
+  z-index: 2;
   box-shadow: 0 1px 5px #626262;
 }
 
